Added Iverson.html and added some style to the table

--- a/review_files/css/style_option1.css
+++ b/review_files/css/style_option1.css
@@ -90,3 +90,10 @@ style.css to use on Monday*/
         background-position: 0% 50%;
     }
 }
+
+/*This is for the table design in the personal pages*/
+table, th, tr, td{
+  border: 1px solid white;
+  color: white;
+  width: 100%;
+}
